errors-exceptions/errors.txt
Indentation Error 
    
    Example - 

            print ("Hey")
            ^
            IndentationError: expected an indented block

Syntax Error 

    Example - 
         print "Hello world"
          ^
        SyntaxError: Missing parentheses in call to 'print'. Did you mean print("Hello world")?


IndexError: 

    Example - 

          a = [1,2,3]
               | | |
               0 1 2
         
          print (a[3])

        IndexError: list index out of range

NameError

TypeError